--- a/regional/templates/europe_colors.css
+++ b/regional/templates/europe_colors.css
@@ -1,4 +1,4 @@
-﻿/* =====================================================================
+/* =====================================================================
    EUROPE WTF - Regional Color Theme
    Base: Antique Gold (#d4af37) + Europe Colors (#0065BD)
    ===================================================================== */
