--- a/regional/templates/france_colors.css
+++ b/regional/templates/france_colors.css
@@ -1,4 +1,4 @@
-﻿/* =====================================================================
+/* =====================================================================
    FRANCE WTF - Regional Color Theme
    Base: Antique Gold (#d4af37) + France Colors (#0065BD)
    ===================================================================== */
