--- a/regional/templates/germany_colors.css
+++ b/regional/templates/germany_colors.css
@@ -1,4 +1,4 @@
-﻿/* =====================================================================
+/* =====================================================================
    GERMANY WTF - Regional Color Theme
    Base: Antique Gold (#d4af37) + Germany Colors (#0065BD)
    ===================================================================== */
