--- a/regional/templates/ireland_colors.css
+++ b/regional/templates/ireland_colors.css
@@ -1,4 +1,4 @@
-﻿/* =====================================================================
+/* =====================================================================
    IRELAND WTF - Regional Color Theme
    Base: Antique Gold (#d4af37) + Ireland Colors (#0065BD)
    ===================================================================== */
